chore: tmp commit (edition and draft part1)
